Overflow-y cause of keyboard bug on phone, added function to size body according to viewport

--- a/CSS/all-pages/main-phone.css
+++ b/CSS/all-pages/main-phone.css
@@ -2,6 +2,7 @@
   html,
   body {
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   body {
